--- a/sources.html
+++ b/sources.html
@@ -7,7 +7,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  <p>このサイトでは里庄町の議会広報編集委員会から発行されている『さとしょう議会だより』の一般会計から引用しています。</p>
+  <p>このサイトでは里庄町の議会広報編集委員会から発行されている『さとしょう議会だより』の一般会計歳出からデータを引用しています。</p>
   </div>
 </div>
 
@@ -16,7 +16,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  里庄町の議会広報編集委員会から発行されている『さとしょう議会だより』において用いている一般会計予算の使いみち9分類を使っています。
+  里庄町の議会広報編集委員会が『さとしょう議会だより』において用いている一般会計予算の使いみち9分類を使っています。
   </div>
 </div>
 <h2 class="page-header">いつの時点のデータを使っているのか？ </h2>
@@ -31,7 +31,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う市税年総額と一日当たりに支払っている市税額が表示されます。一日当たりの市税額は10分野に分類されています。また、９の各分野毎に支払われている市税額は、それぞれ、主要な事業予算を担当している市税額に細分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、市税負担額は課税対象額の6％と設定しています。また、９分野への税金の配分比率は、横浜市の一般会計全体における10分野への予算配分比率(27年1月1日現在)を使っています。
+自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う市税年総額と一日当たりに支払っている市税額が表示されます。一日当たりの市税額は９分野に分類されています。また、９の各分野毎に支払われている市税額は、それぞれ、主要な事業予算を担当している市税額に細分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、市税負担額は課税対象額の6％と設定しています。また、９分野への税金の配分比率は、里庄町の一般会計全体における９分野への予算配分比率(27年1月1日現在)を使っています。
 </div>
 </div>
 
@@ -49,7 +49,7 @@ If you know of data published in this way for your country, please email us at <
 
 <div class="row">
   <div class="span8 offset4">
-  今回の<strong>Where Does My Money Go?</strong> β版は横浜市の平成24年度一般会計予算のうち、主要事業のみを対象としていますが、今後3000事業すべてを反映させる予定です。今後、各自治体や日本政府の一般会計、特別会計、公営企業会計へと対象を広げることも考えています。
+  平成２７年度一般会計予算のうち、主要事業のデータの使っています。
 
   </div>
 </div>
