--- a/sources.html
+++ b/sources.html
@@ -23,7 +23,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-  平成２７年度里庄町予算のデータを使っています。
+  平成27年度里庄町予算のデータを使っています。
   </div>
 </div>
 
@@ -31,7 +31,7 @@ layout: default
 
 <div class="row">
   <div class="span8 offset4">
-自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う市税年総額と一日当たりに支払っている市税額が表示されます。一日当たりの市税額は９分野に分類されています。また、９の各分野毎に支払われている市税額は、それぞれ、主要な事業予算を担当している市税額に細分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、市税負担額は課税対象額の6％と設定しています。また、９分野への税金の配分比率は、里庄町の一般会計全体における９分野への予算配分比率(27年1月1日現在)を使っています。
+自分の年間総収入を入力し、単身世帯かそれ以外かを選択すると、給与所得者であるという前提で、年間に支払う市税年総額と一日当たりに支払っている市税額が表示されます。一日当たりの市税額は9分野に分類されています。また、9の各分野毎に支払われている市税額は、それぞれ、主要な事業予算を担当している市税額に細分類されています。<br/>所得控除額は、単身世帯の場合33万円、扶養一人世帯の場合66万円、市税負担額は課税対象額の6％と設定しています。また、9分野への税金の配分比率は、里庄町の一般会計全体における9分野への予算配分比率を使っています。
 </div>
 </div>
 
@@ -49,7 +49,7 @@ If you know of data published in this way for your country, please email us at <
 
 <div class="row">
   <div class="span8 offset4">
-  平成２７年度一般会計予算のうち、主要事業のデータの使っています。
+  平成27年度一般会計予算のうち、主要事業のデータを使っています。
 
   </div>
 </div>
